refactor(java): remove byte array stream private wrapping